--- a/css/style.css
+++ b/css/style.css
@@ -29,8 +29,10 @@ body {
 }
 .dropScroll {
     overflow-x: hidden; /* Deletes scrolling in the adaptive menu */
-    /*margin: 10px;*/
+    -ms-overflow-style: none;
+    overflow: -moz-scrollbars-none;
 }
+.dropScroll::-webkit-scrollbar { width: 0; }
 div .form-group {
     margin-left: 15px;
     margin-right: 15px;
@@ -46,9 +48,6 @@ div .form-group {
     overflow: -moz-scrollbars-none;
 }
 .infoModal::-webkit-scrollbar { width: 0; }
-/*.canvas-wrap { 
-    position: relative;
-}*/
 .canvas {
     display: block;
 }
